projects/nx/src/apps/nx-dashboard/live/production/glance-ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: authelia-sso
spec:
  forwardAuth:
    address: http://authelia.nx-sso.svc.cluster.local/api/authz/forward-auth
    trustForwardHeader: true
    authResponseHeaders:
      - Remote-User
      - Remote-Groups
      - Remote-Email
      - Remote-Name
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  labels:
    app.kubernetes.io/instance: glance
    app.kubernetes.io/name: glance
    app.kubernetes.io/part-of: start-page
    app.kubernetes.io/version: 0.6.1
  name: glance
spec:
  parentRefs:
    - kind: Gateway
      name: default-gateway
      namespace: kube-system
      sectionName: chezmoi.sh-websecure
  hostnames:
    - home.chezmoi.sh
  rules:
    - backendRefs:
        - kind: Service
          name: glance
          port: 80
      filters:
        - type: ExtensionRef
          extensionRef:
            group: traefik.io
            kind: Middleware
            name: authelia-sso
